Four Function APS (+ terminal)