@@ -1,6 +1,8 @@
 package frc.robot;
 
+import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.util.ArrayList;
 
 import com.google.gson.*;
@@ -10,12 +12,23 @@ import com.neovisionaries.ws.client.WebSocketAdapter;
 import com.neovisionaries.ws.client.WebSocketException;
 import com.neovisionaries.ws.client.WebSocketFactory;
 
+import edu.wpi.first.wpilibj.RobotState;
+import edu.wpi.first.wpilibj.simulation.DriverStationSim;
+
 public class Ncp {
     // * Variables
     String ncpServerURL = "ws://localhost:9072/v1/client";
     WebSocketFactory ncpFactory;
     WebSocket ncpWebSocket;
     ArrayList<String> ncpLogs = new ArrayList<>();
+
+    // * APS Variables
+    boolean apsRecording = false;
+    boolean apsPlaying = false;
+    ArrayList<ArrayList<Double>> apsActions = new ArrayList<>(3);
+    int apsIndex = 0;
+
+    private ArrayList<Integer> ncpAprilTags = new ArrayList<>();
 
     Ncp() {
         // ? NCP uses websockets for fast communication between the client, the server,
@@ -30,8 +43,7 @@ public class Ncp {
         }
     }
 
-    // ! Nyahiito Control Panel: Core function, handles initial connection and
-    // messages
+    // ! Nyahiito Control Panel: Core function, handles initial connection and messages
     public void core() {
         try {
             ncpWebSocket.addListener(new WebSocketAdapter() {
@@ -40,14 +52,29 @@ public class Ncp {
                     JsonObject rootObject = JsonParser.parseString(message).getAsJsonObject();
 
                     // ? Execute Request: If the message is one, execute a command.
-                    // ! Be careful executing commands, Dwayne! Not sure if you know how to type though
+                    // ! Be careful executing commands, Dwayne! Not sure if you know how to type
                     if (rootObject.has("Execute")) {
-                        String command = rootObject.getAsJsonObject("Execute").getAsString();
-                        log(command);
+                        String command = rootObject.get("Execute").getAsString();
                         exec(command);
                     } else {
-                        // * NCP Protocol: Websocket messages get sent from the control panel, to the Node server, and finally to this code.
+                        // * NCP Protocol: Websocket messages get sent from the control panel, to the
+                        // Node server, and finally to this code.
                         // ? Messages are in the JSON format where all data is in the core object.
+
+                        // Set robot mode
+                        switch (rootObject.get("Mode").getAsString()) {
+                            case "off":
+                                DriverStationSim.setEnabled(false);
+                                break;
+                            case "teleop":
+                                DriverStationSim.setEnabled(true);
+                                DriverStationSim.setAutonomous(false);
+                                break;
+                            case "auto":
+                                DriverStationSim.setEnabled(true);
+                                DriverStationSim.setAutonomous(true);
+                                break;
+                        }
 
                         // Obtain variables and push changes
                         JsonObject varsObject = rootObject.getAsJsonObject("Variables");
@@ -56,14 +83,19 @@ public class Ncp {
                         Constants.armLengthInPOV = varsObject.get("Arm In POV").getAsInt();
                         Constants.joystickDriftSafety = varsObject.get("Joystick Drift").getAsDouble();
 
-                        log("Updated successfully.");
+                        // Detect APS
+                        if (rootObject.has("Pathway System")) {
+                            log("Mode set.");
+                            String apsOption = rootObject.get("Pathway System").getAsString();
+                            aps(apsOption);
+                        }
                     }
                 }
             });
 
             ncpWebSocket.connect();
 
-            log("Connection: Nyahiito es aquí.");
+            log("<b style='color: orange'>🐯 Nyahiito es aquí.</b>");
             publish();
         } catch (WebSocketException e) {
             e.printStackTrace();
@@ -75,6 +107,10 @@ public class Ncp {
         // Create the main JSON Object
         JsonObject json = new JsonObject();
 
+        // Set the mode, assuming the *test* mode is irrelevant
+        String mode = RobotState.isTeleop() ? "teleop" : RobotState.isAutonomous() ? "auto" : "off";
+        json.addProperty("Mode", mode);
+
         // Create the variables object with its values
         JsonObject varsObject = new JsonObject();
         varsObject.addProperty("Arm Speed", Constants.armSpeed);
@@ -82,25 +118,79 @@ public class Ncp {
         varsObject.addProperty("Arm Out POV", Constants.armLengthOutPOV);
         varsObject.addProperty("Joystick Drift", Constants.joystickDriftSafety);
 
+        // Create detected AprilTags array
+        JsonArray tagsArray = new JsonArray();
+        for (Integer tag : ncpAprilTags) {
+            tagsArray.add(tag);
+        }
+
         // Add all child objects
         json.add("Variables", varsObject);
+        json.add("Tags", tagsArray);
 
         // ? Normal Publish: Send the normal data for the client
         ncpWebSocket.sendText(json.toString());
     }
 
+    // ? Overload for sending in AprilTag data
+    public void publish(ArrayList<Integer> aprilTags) {
+        ncpAprilTags = aprilTags;
+        publish(); 
+    }
+
     public void log(String message) {
+        JsonObject log = new JsonObject();
+        log.addProperty("Log", message);
+
         // ? Log Publish: Send a message to display in the client's terminal
-        ncpWebSocket.sendText("{\"Log\":\"" + message + "\"}");
+        ncpWebSocket.sendText(log.toString());
     }
 
     // ! Don't pull a sudo rm -rf /
     public void exec(String cmd) {
         try {
-            // TODO: Test this, doesn't work with Windows simulation
-            Runtime.getRuntime().exec(cmd);
-        } catch (IOException e) {
+            // * For the actual robot, it's { "/bin/sh", "-c", cmd }
+            Process proc = Runtime.getRuntime().exec(new String[] { "cmd.exe", "/c", cmd });
+
+            BufferedReader reader = new BufferedReader(new InputStreamReader(proc.getInputStream()));
+
+            String line;
+            while ((line = reader.readLine()) != null) {
+                // Call a log function with the output line
+                log(line);
+            }
+
+            proc.waitFor();
+        } catch (IOException | InterruptedException e) {
+            // Alert that the command failed
+            log("Invalid.");
+
             e.printStackTrace();
         }
+    }
+
+    // * Pathway Functions
+    public void aps(String mode) {
+        // Switch function looking real good right now
+        if (mode == "reset") {
+            apsActions.clear();
+            apsRecording = false;
+            apsPlaying = false;
+        } else if (mode == "stop") {
+            apsRecording = false;
+            apsPlaying = false;
+        } else if (mode == "play") {
+            apsPlaying = true;
+        } else {
+            // "record"
+            apsRecording = true;
+        }
+    }
+
+    // TODO: Pathway Loading. Find the JSON file in /home/lvuser, load it into an ArrayList, then start recording!
+    public void apl(String path) {
+        apsActions.clear();
+        
+        apsPlaying = true;
     }
 }
